flyweb/css/style.css
/* ... */
.adm-bottoni-gestione{
    text-align: center;
}

.adm-card h3{
    display: inline;
}

.adm-card h2{
    text-align: center;
    font-weight:bold;
}

.adm-titolo{
    width: 100%;
    color:  #0a3150;
    text-align: center;
    margin-bottom: 0.5em;
    background-color: #E9EBEE;
}

.adm-card-rev{
    text-align: center;
}

/* === SEARCH BOX === */
.content-search-box{
    margin: 0 auto;
    background-color: #ffd394;
    padding: 2em 0 2em;
    margin-bottom: -1em;
}
.form-search{
    background-color: #0a3150;
    color:#fff;
    margin: 0 auto;
    width: 90%;
    border-radius: 30px;
    text-align: center;
    padding: 2em 0 1em 0;
}

.form-search legend{
    height: 0px;
}

.form-search fieldset{
    display: block;
    border: 0;
}

.form-search input, .form-search label, .lista{
    border-radius: 2em;
    border: 0;
}

.form-search input, .lista{
    padding: 1.2em;
    border:  2px solid #fff;
}

.lista{
    font-size: medium;
    cursor: pointer;
    width: 50%;
}

.lista:active, .lista:focus{
    outline: none;
    box-shadow: none;
    border: 0;
}

.form-search .src-input:hover, .lista:hover{
    background-color: #d3e2f8;
    border:  2px solid #d3e2f8;
}
.form-search .src-input:focus, .lista:focus{
    background-color: #91bcfd;
    border:  2px solid #91bcfd;
}

.form-search span{
    margin-left: 0.5em;
}

.search-box-div{
    display: inline-flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: space-between;
    width: 90%;
    border-radius: 2em;
    text-align: left;
    align-content: center;
    margin-bottom: 1em;
}

.search-box{
    background-color: #FF8C00;
}

.search-input-field{    
    width: 70%;
}

.search-input-field .search-key{
    width: 70%;
}

.search-submit-field{
    width: 30%;
}

.search-submit{
    min-width: 100%;
    background-color: #4caf50;
    font-weight: bolder;
}

.search-submit:hover{
    border: 2px solid #4caf50;
    color: #fff;
}

.search-label{
    min-width: 45%;
    display: inline-flex;
    justify-content: space-between;
    background-color: #FF8C00;
    min-width: 49%;
    align-items: center;
    margin: 0 auto;
    margin-top: 1em;
}

#btn-filtri{
    width: 90%;
    background-color: #1B88E0;
    border: 2px solid #d3e2f8;
}
#btn-filtri:hover{
    border: 2px solid #1B88E0;
    color: #fff;
}

.form-search .filtri-si{
    display: block;
}
.form-search .filtri-no{
    display: none;
}

.form-search ::-webkit-calendar-picker-indicator:hover{
    cursor: pointer;
}

.form-search input:focus{
    outline: none;
    box-shadow: none;
}
.board-contenuto .search-key{
    width: 90%;

}
.board-contenuto .search-input-field span{
    margin: 0 auto;
    display: block;
    text-align: center;
}

.board-contenuto .search-submit-field, .board-contenuto .search-input-field{
    display: block;
    margin: 0.5em 0 0.5em 0;
    width: 100%;
}

/* === adattamento form alla dash di amministrazione === */
.board-flex-container .search-box{
    margin: 0 0 1em 0;
}

.board-flex-container .search-label{
    width: 100%;  
    margin: 0 0 1em 0;
}

/* === TRAVELS LIST === */
.risultati-ricerca{
    background-color: #ffd394;
}

.travels-list{
    display: flex;
    flex-wrap: wrap;
    word-wrap: break-word;
    justify-content: center;
    width: 100%;
    padding-top: 1em;
    padding-bottom: 1em;
    margin-top: -1em;
    background-color: #ffd394;
    order:3;
    list-style-type: none;
}

.travel-list-item {
    flex: 0 0 300px;
    max-width: 300px;
    box-shadow: 2px 2px 6px 0px  rgba(0,0,0,0.3);
    background-color: #f5f5f5;
    margin: 1em ;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

.item-title{
    height: 6em;
}

.item-desc{
    height: 12em;
    padding: 0.3em;
}

.item-info{
    background-color: 	#FFFACD;
}
.travel-list-item p, .travel-list-item h2, .travel-list-item h3{
    padding: 0em 0.5em 0em 0.5em;
}

.travel-list-item h2{
    text-align: center;
    min-height: 10%;
    margin-bottom: 0.5em;
}

.travel-list-item p{
    text-align: justify;
    margin-bottom: 1em;
}

.travel-list-item h3{
    font-weight: bolder;
    display: inline;

}
.travel-image{
    height: 200px;
    width: 100%;
    padding: 0;
    margin: 0;
    background-color: #FF8C00;
}

.travel-goto{
    padding:0.5em;
    background-color: #00ACFF;
    color: #fff;
    border: 0;
    font-size: large;
    border-radius: 5px;
    margin: auto;
    margin-bottom: 1em; 
    margin-top: 1em;
    display:block;
    text-align: center;
    width: 90%;
    cursor: pointer;
    box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
}

.travel-goto:hover{
    background-color: #0a3150;
    box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
}

.travel-goto:hover a{
    color: #fff;
}

.travel-goto:focus{
    outline: none;
    box-shadow: none;
}

/* === TRAVEL DETAILS === */
.travel-details-container {
    display         : inline-flex;
    flex-direction  : row;
    flex-wrap       : wrap;    
    justify-content : space-between;
    margin-top      : 1em;
    width           : 100%;
    min-height: 80%;
    max-height: 80%;
}

.main-img{
    order           : 1;
    width           : 50%;
    max-height      : 50vh;
    background-size: cover;
    border          : 2px solid #ddd;
}

.travel-details-container .travel-details-info {
    display         : flex;
    flex-direction  : column;
    justify-content : space-between;
    order           : 2;
    min-width: 48%;
    max-width: 48%;
}

.travel-details-info h1{
    margin-bottom   : 0.5em;
}

.travel-details-container .complete-desc{
    order           : 3;
    padding: 0 0.5em 0 0.5em;
    width: 100%;
    margin-top      : 2em;
}

.travel-details-container .travel-goto{
    font-size       : large;
    text-align      : center;
    width           : 90%;
    padding         : 1em;
    margin          : 0 auto;
    border-radius   : 10px;
}
/* ... */

